seamless/tests/api_error_compile_tests/06_not_both.stderr
error: 'internal' and 'external' can't be declared together
 --> $DIR/06_not_both.rs:2:13
  |
2 | #[api_error(external, internal)]
  |             ^^^^^^^^
